--- a/about_us.html
+++ b/about_us.html
@@ -10,43 +10,62 @@
 </head>
 
 <body>
-
-  <header id="top_header">
-    <div></div>
-    <div id="logo">
-
-      <a href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-      <!-- <h1>Brand Name</h1>  -->
-    </div>
+  <header>
+    <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+    <img id="menu_bar" src="images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
     <nav id="nav_area">
-      <ul>
-        <li><a href="./">Home</a></li>
-        <li><a href="./about_us.html">About Us</a></li>
-        <li><a href="./services.html">Services</a></li>
-        <li><a href="./resources.html">Resources</a></li>
-        <li><a href="./contact_us.html">Contact Us</a></li>
-      </ul>
-
+      <a href="./">Home</a>
+      <a class="selected_nav_item" href="./about_us.html">About Us</a>
+      <a href="./services.html">Services</a>
+      <a href="./resources.html">Resources</a>
+      <a href="./contact_us.html">Contact Us</a>
     </nav>
-    <div>
-      <a href="tel:614-555-5555"><strong>(614) 555-5555</strong></a>
-      <p>email@email.com</p>
-      <ul id="header_socials">
-        <img id="facebook_icon" src="images/facebook_icon.svg" alt="facebook_icon">
-      </ul>
-
-    </div>
-
   </header>
 
   <main>
     <div id="about_top_section" class='top_section'>
-      <h1>About Us</h1>
-      <h2>(614)555-5555</h2>
+      <h1>About Merve Care LLC</h1>
+      <!-- <span id="breadcrumb">
+        <a href="../services.html">About Us</a>
+      </span> -->
     </div>
-
     <div>
-      <img src="https://dummyimage.com/300x300/9e6e9e/bdbfde&text=Nice+image" alt="about us" />
+      <div id="about_us_section">
+        <div id="about_us_left">
+          <img src="images/about_us_pics_web.png" alt="About us pics">
+          <!-- <img src="images/nurse_with_man_in_wheelchair.png" alt="Nurse with elder man in wheelchair">
+            <img src="images/elderly_woman_pushed_in_wheelchair.png" alt="ELderly woman being pushed in a wheelchair"> -->
+        </div>
+        <div id="about_us_right">
+          <h2>
+            About Us
+          </h2>
+          <p>Some stuff about us Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ducimus odio
+            laudantium eligendi unde aspernatur voluptates culpa similique aut mollitia, quaerat voluptatem
+            maxime hic numquam iusto, iure repellat doloribus quis.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam vel voluptatem corrupti eum
+            odit illum, nisi suscipit, blanditiis accusamus facere sed eius illo natus tenetur voluptates itaque
+            aut dolores.</p>
+          <div class="mission_visions">
+            <img class="mission_vision_font" src="images/person-circle-question-solid 1.svg" alt="mission font">
+            <div class="mission_vision_texts">
+              <h4>Our Mission</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis numquam libero iusto
+                possimus repellendus blanditiis laboriosam ipsam?</p>
+            </div>
+          </div>
+          <div class="mission_visions">
+            <img class="mission_vision_font" src="images/bullseye-solid 1.svg" alt="vision font">
+            <div class="mission_vision_texts">
+              <h4>Our Vision</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum facilis ut saepe ad
+                facere, dicta perspiciatis hic commodi temporibus veritatis!.</p>
+            </div>
+          </div>
+          <a class="action_btn" href="/about_us.html">Learn More</a>
+        </div>
+      </div>
+      <!-- <img src="https://dummyimage.com/300x300/9e6e9e/bdbfde&text=Nice+image" alt="about us" />
       <h1>Learn about who we are</h1>
       <p>
         Founded in 2020, Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -90,30 +109,99 @@
           fusce ut placerat orci. Tincidunt lobortis feugiat vivamus at augue
           eget arcu.
         </p>
-      </div>
+      </div> -->
     </div>
-    <footer>
-      <div>
-        <h3>Merve Care LLC</h3>
-        <p>Merve Care LLC © 2022</p>
-      </div>
-      <div id="footer_quick_links">
-        <h3>Quick Links</h3>
-        <a href="./">Home</a>
-        <a href="./about_us">About Us</a>
-        <a href="./services">Services</a>
-        <a href="./resources">Resources</a>
-        <a href="./contact_us">Contact Us</a>
-      </div>
-      <div id="footer_contact">
-        <h3>Contact Us</h3>
-        <a href="tel:614-555-5555">614-555-5555</a>
-        <a href="mailto:unknown@email.com">unknown@email.com</a>
-        <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
-      </div>
   </main>
 
-  </footer>
+  <footer>
+    <div id="footer_top">
+        <div id="newsletter_subscribe_left">
+            <h2>Something Catchy</h2>
+            <h2>Something Else Catchy</h2>
+            <h3>Subscribe to our newsletter</h3>
+            <form class="newsletter_subscribe_form" action="">
+                <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                <input type="submit" value="">
+            </form>
+        </div>
+        <div id="newsletter_subscribe_right">
+            <img src="images/newsletter_handholding.png" alt="">
+        </div>
+    </div>
+    <div id="footer_bottom">
+        <div class="logo_social">
+            <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+            <div class="social_media">
+                <p>Social Media</p>
+                <div class="social_media_icons">
+                    <img src="images/facebook_icon.svg" alt="Facebook logo">
+                </div>
+            </div>
+        </div>
+        <div class="footer_quick_links">
+            <h3>Links</h3>
+            <nav>
+                <a href="./">Home</a>
+                <a href="./contact_us.html">Contact Us</a>
+                <a href="./services.html">Services</a>
+                <a href="./about_us.html">About Us</a>
+                <a href="./resources.html">Resources</a>
+            </nav>
+        </div>
+        <div class="footer_contact">
+            <h3>Contact</h3>
+            <a href="tel:614-555-5555">614-555-5555</a>
+            <a href="mailto:unknown@email.com">unknown@email.com</a>
+            <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+        </div>
+        <div class="footer_newsletter">
+            <h3>Newsletter</h3>
+            <div class="footer_newsletter_box">
+                <p>Subscribe to our newsletter</p>
+                <form class="newsletter_subscribe_form" action="">
+                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                    <input type="submit" value="">
+                </form>
+            </div>
+        </div>
+    </div>
+    <div id="footer_bottom_mobile">
+        <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+        <div class="footer_contact">
+            <h3>Contact</h3>
+            <a href="tel:614-555-5555">614-555-5555</a>
+            <a href="mailto:unknown@email.com">unknown@email.com</a>
+            <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+        </div>
+        <div class="footer_quick_links">
+            <h3>Links</h3>
+            <nav>
+                <a href="./">Home</a>
+                <a href="./contact_us.html">Contact Us</a>
+                <a href="./services.html">Services</a>
+                <a href="./about_us.html">About Us</a>
+                <a href="./resources.html">Resources</a>
+            </nav>
+        </div>
+        <div class="social_media">
+            <h3>Social Media</h3>
+            <div class="social_media_icons">
+                <a href=""><img src="images/facebook_icon.svg" alt="Facebook logo" ></a>
+            </div>
+        </div>
+        <div class="footer_newsletter">
+            <h3>Newsletter</h3>
+            <div class="footer_newsletter_box">
+                <p>Subscribe to our newsletter</p>
+                <form class="newsletter_subscribe_form" action="">
+                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                    <input type="submit" value="">
+                </form>
+            </div>
+        </div>
+    </div>
+</footer>
+  <script src="index.js"></script>
 </body>
 
 </html>
