--- a/contact_us.html
+++ b/contact_us.html
@@ -1,78 +1,150 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./style.css">
-        <link rel="stylesheet" href="./contact_us.html">
-        <title>Contact Us</title>
-        <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
-    </head>
-    <body>
-        <header id="top_header">
-            <div></div>
-            <div id="logo">
-                <a href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-                <!-- <h1>Brand Name</h1>  -->
-            </div>
-            <nav id="nav_area">
-                <ul>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="./about_us.html">About Us</a></li>
-                    <li><a href="./services.html">Services</a></li>
-                    <li><a href="./resources.html">Resources</a></li>
-                    <li><a href="./contact_us.html">Contact Us</a></li>
-                </ul>
 
-            </nav>
-            <div>
-                <a href="tel:614-555-5555"><strong>(614) 555-5555</strong></a>
-                <p>email@email.com</p>
-                <ul id="header_socials">
-                    <img id="facebook_icon" src="images/facebook_icon.svg" alt="facebook_icon">
-                </ul>
-            </div>
-        </header>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./contact_us.css">
+    <title>Contact Us</title>
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+</head>
 
-        <main id="contact_us">
-            <div id="top_section">
-                <h1>Contact Us</h1>
-            </div>
-            <form id="contact_form" name="contact-form" data-name="Contact Form" redirect="" method="get">
-                <div>
-                    <input type="text" maxlength="256" placeholder="Name" id="name" required />
-                </div>
-                <div>
-                    <input type="email" maxlength="256" placeholder="Email" id="email" required/>
-                </div>
-                <div>
-                    <input type="tel" maxlength="256" placeholder="Phone Number" required/>
-                </div>
-                <div>
-                    <textarea id="textarea" maxlength="5000" placeholder="Type your message here..." required></textarea>
-                </div>
-                <input type="submit" value="Submit" />
-            </form>
-        </main>
+<body>
+    <header>
+        <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+        <img id="menu_bar" src="images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
+        <nav id="nav_area">
+            <a href="./">Home</a>
+            <a href="./about_us.html">About Us</a>
+            <a href="./services.html">Services</a>
+            <a href="./resources.html">Resources</a>
+            <a class="selected_nav_item" href="./contact_us.html">Contact Us</a>
+        </nav>
+    </header>
 
-        <footer>
-            <div>
-                <h3>Merve Care LLC</h3>
-                <p>Merve Care LLC © 2022</p>
+    <main id="contact_us">
+        <div id="top_section">
+            <h1>Contact Us</h1>
+        </div>
+        <form id="contact_page_form" action="">
+            <div class="form_row">
+                <div class="form_field">
+                    <label for="first_name">First Name *</label>
+                    <input type="text" name="first_name" id="" required>
+                </div>
+                <div class="form_field">
+                    <label for="last_name">Last Name</label>
+                    <input type="text" name="last_name" id="">
+                </div>
             </div>
-            <div id="footer_quick_links">
-                <h3>Quick Links</h3>
-                <a href="./">Home</a>
-                <a href="./about_us">About Us</a>
-                <a href="./services">Services</a>
-                <a href="./resources">Resources</a>
-                <a href="./contact_us">Contact Us</a>
+            <div class="form_row">
+                <div class="form_field">
+                    <label for="email">Email Address *</label>
+                    <input type="email" name="email" id="" required>
+                </div>
+                <div class="form_field">
+                    <label for="phone_number">Phone Number</label>
+                    <input type="text" pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]\d{3}[\s.-]\d{4}$" name="pbone_number"
+                        id="">
+                </div>
             </div>
-            <div id="footer_contact">
-                <h3>Contact Us</h3>
+            <div class="form_row form_field">
+                <label for="message">Message *</label>
+                <textarea name="message" id="" cols="30" rows="10" required></textarea>
+            </div>
+            <input type="submit" value="Submit Your Message">
+        </form>
+    </main>
+
+    <footer>
+        <div id="footer_top">
+            <div id="newsletter_subscribe_left">
+                <h2>Something Catchy</h2>
+                <h2>Something Else Catchy</h2>
+                <h3>Subscribe to our newsletter</h3>
+                <form class="newsletter_subscribe_form" action="">
+                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                    <input type="submit" value="">
+                </form>
+            </div>
+            <div id="newsletter_subscribe_right">
+                <img src="images/newsletter_handholding.png" alt="">
+            </div>
+        </div>
+        <div id="footer_bottom">
+            <div class="logo_social">
+                <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+                <div class="social_media">
+                    <p>Social Media</p>
+                    <div class="social_media_icons">
+                        <img src="images/facebook_icon.svg" alt="Facebook logo">
+                    </div>
+                </div>
+            </div>
+            <div class="footer_quick_links">
+                <h3>Links</h3>
+                <nav>
+                    <a href="./">Home</a>
+                    <a href="./contact_us.html">Contact Us</a>
+                    <a href="./services.html">Services</a>
+                    <a href="./about_us.html">About Us</a>
+                    <a href="./resources.html">Resources</a>
+                </nav>
+            </div>
+            <div class="footer_contact">
+                <h3>Contact</h3>
                 <a href="tel:614-555-5555">614-555-5555</a>
                 <a href="mailto:unknown@email.com">unknown@email.com</a>
                 <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
             </div>
-        </footer>
-    </body>
+            <div class="footer_newsletter">
+                <h3>Newsletter</h3>
+                <div class="footer_newsletter_box">
+                    <p>Subscribe to our newsletter</p>
+                    <form class="newsletter_subscribe_form" action="">
+                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                        <input type="submit" value="">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div id="footer_bottom_mobile">
+            <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+            <div class="footer_contact">
+                <h3>Contact</h3>
+                <a href="tel:614-555-5555">614-555-5555</a>
+                <a href="mailto:unknown@email.com">unknown@email.com</a>
+                <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+            </div>
+            <div class="footer_quick_links">
+                <h3>Links</h3>
+                <nav>
+                    <a href="./">Home</a>
+                    <a href="./contact_us.html">Contact Us</a>
+                    <a href="./services.html">Services</a>
+                    <a href="./about_us.html">About Us</a>
+                    <a href="./resources.html">Resources</a>
+                </nav>
+            </div>
+            <div class="social_media">
+                <h3>Social Media</h3>
+                <div class="social_media_icons">
+                    <a href=""><img src="images/facebook_icon.svg" alt="Facebook logo"></a>
+                </div>
+            </div>
+            <div class="footer_newsletter">
+                <h3>Newsletter</h3>
+                <div class="footer_newsletter_box">
+                    <p>Subscribe to our newsletter</p>
+                    <form class="newsletter_subscribe_form" action="">
+                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                        <input type="submit" value="">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="index.js"></script>
+</body>
+
 </html>
