--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+        <img id="menu_bar" src="images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
         <nav id="nav_area">
             <a class="selected_nav_item" href="./">Home</a>
             <a href="./about_us.html">About Us</a>
@@ -22,7 +23,7 @@
     </header>
 
     <main>
-        <div id="home_top_section" class="top_section">
+        <div id="home_top_section">
             <div id="home_top_section_text">
                 <h2>Something Catchy</h2>
                 <h2>Something Else Catchy</h2>
@@ -52,10 +53,10 @@
                 of our patients, both for the present and future.</p>
             <div id="services">
                 <div class="service">
-                    <img src="images/personal_care.jpg" alt="personal care picture">
+                    <img src="images/person_care_nurse.png" alt="personal care picture">
                     <h3>Personal Care</h3>
                     <p>Non-medical assistance with daily living activities including helping with personal hygiene</p>
-                    <a href="./services/personal_care.html">
+                    <a class="more_details_btn" href="./services/personal_care.html">
                         More Details
                         <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
                             alt="red arrow font">
@@ -63,10 +64,10 @@
 
                 </div>
                 <div class="service">
-                    <img src="images/housekeeping.jpg" alt="housekeeping/homemaking picture">
+                    <img src="images/house_keeping.png" alt="housekeeping/homemaking picture">
                     <h3>Homemaking/Housekeeping</h3>
                     <p>Assistance around the house with tasks such as cleaning, laundry, and cooking</p>
-                    <a href="./services/housekeeping.html">
+                    <a class="more_details_btn" href="./services/housekeeping.html">
                         More Details
                         <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
                             alt="red arrow font">
@@ -76,7 +77,7 @@
                     <img src="images/respite_care.jpg" alt="respite care picture">
                     <h3>Respite Care</h3>
                     <p>Short time relief from home care so that primary caregiver can take a break</p>
-                    <a href="./services/respite_care.html">
+                    <a class="more_details_btn" href="./services/respite_care.html">
                         More Details
                         <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
                             alt="red arrow font">
@@ -86,17 +87,17 @@
                     <img src="images/home_visits.jpg" alt="home visits picture">
                     <h3>Home Visits</h3>
                     <p>description</p>
-                    <a href="./services/home_visits.html">
+                    <a class="more_details_btn" href="./services/home_visits.html">
                         More Details
                         <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
                             alt="red arrow font">
                     </a>
                 </div>
                 <div class="service">
-                    <img src="images/personal_care.jpg" alt="intermittent chores picture">
+                    <img src="images/chore.jpg" alt="intermittent chores picture">
                     <h3>Intermittent Chores</h3>
                     <p>We offer intermittent chore services including clearing snow and cutting grass</p>
-                    <a href="./services/intermittent_chores.html">
+                    <a class="more_details_btn" href="./services/intermittent_chores.html">
                         More Details
                         <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
                             alt="red arrow font">
@@ -106,7 +107,7 @@
                     <img src="images/miscellaneous.jpg" alt="miscellaneous care picture">
                     <h3>Miscellaneous</h3>
                     <p>Various other needs such as grocery shopping and other errands</p>
-                    <a href="./services/miscellaneous.html">
+                    <a class="more_details_btn" href="./services/miscellaneous.html">
                         More Details
                         <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
                             alt="red arrow font">
@@ -114,7 +115,7 @@
                 </div>
             </div>
             <p>Dont hesitate contact us to find out more about the services we provide. <a href="/services.html">Explore
-                    our services</a></p>
+                    more services</a></p>
         </div>
 
         <div id="middle_section_2" class="middle_section">
@@ -154,9 +155,11 @@
             </div>
         </div>
 
-        <div id="middle_section_3">
+        <div id="about_us_section">
             <div id="about_us_left">
-
+                <img src="images/about_us_pics_web.png" alt="About us pics">
+                <!-- <img src="images/nurse_with_man_in_wheelchair.png" alt="Nurse with elder man in wheelchair">
+                <img src="images/elderly_woman_pushed_in_wheelchair.png" alt="ELderly woman being pushed in a wheelchair"> -->
             </div>
             <div id="about_us_right">
                 <h2>
@@ -169,22 +172,19 @@
                     odit illum, nisi suscipit, blanditiis accusamus facere sed eius illo natus tenetur voluptates itaque
                     aut dolores.</p>
                 <div class="mission_visions">
-                    <img src="" alt="mission font">
+                    <img class="mission_vision_font" src="images/person-circle-question-solid 1.svg" alt="mission font">
                     <div class="mission_vision_texts">
                         <h4>Our Mission</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis numquam libero iusto
-                            possimus repellendus blanditiis laboriosam ipsam placeat minima quas officia, aliquid unde
-                            harum
-                            ullam ad autem a sed?</p>
+                            possimus repellendus blanditiis laboriosam ipsam?</p>
                     </div>
                 </div>
                 <div class="mission_visions">
-                    <img src="" alt="vision font">
+                    <img class="mission_vision_font" src="images/bullseye-solid 1.svg" alt="vision font">
                     <div class="mission_vision_texts">
                         <h4>Our Vision</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum facilis ut saepe ad
-                            facere, dicta perspiciatis hic commodi temporibus veritatis! Sit reprehenderit autem
-                            mollitia fuga odit iusto, aut similique.</p>
+                            facere, dicta perspiciatis hic commodi temporibus veritatis!.</p>
                     </div>
                 </div>
                 <a class="action_btn" href="/about_us.html">Learn More</a>
@@ -196,7 +196,8 @@
             <p>Talk to us about anything</p>
             <div id="contact_us_box">
                 <div id="contact_us_left">
-
+                    <img src="images/smiling-young-blonde-female-doctor-wearing-medical-robe-stethoscope-around-neck-looking-pointing-side 1.png"
+                        alt="">
                 </div>
                 <div id="contact_us_right">
                     <form action="">
@@ -230,43 +231,97 @@
                 </div>
             </div>
         </div>
+    </main>
 
-        <div id="middle_section_5">
+    <footer>
+        <div id="footer_top">
             <div id="newsletter_subscribe_left">
                 <h2>Something Catchy</h2>
                 <h2>Something Else Catchy</h2>
                 <h3>Subscribe to our newsletter</h3>
-                <form action="">
+                <form class="newsletter_subscribe_form" action="">
                     <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                    <input type="submit" value="Subscribe">
+                    <input type="submit" value="">
                 </form>
             </div>
             <div id="newsletter_subscribe_right">
-
+                <img src="images/newsletter_handholding.png" alt="">
             </div>
         </div>
-    </main>
-
-    <footer>
-        <div>
-            <h3>Merve Care LLC</h3>
-            <p>Merve Care LLC © 2022</p>
+        <div id="footer_bottom">
+            <div class="logo_social">
+                <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+                <div class="social_media">
+                    <p>Social Media</p>
+                    <div class="social_media_icons">
+                        <img src="images/facebook_icon.svg" alt="Facebook logo">
+                    </div>
+                </div>
+            </div>
+            <div class="footer_quick_links">
+                <h3>Links</h3>
+                <nav>
+                    <a href="./">Home</a>
+                    <a href="./contact_us.html">Contact Us</a>
+                    <a href="./services.html">Services</a>
+                    <a href="./about_us.html">About Us</a>
+                    <a href="./resources.html">Resources</a>
+                </nav>
+            </div>
+            <div class="footer_contact">
+                <h3>Contact</h3>
+                <a href="tel:614-555-5555">614-555-5555</a>
+                <a href="mailto:unknown@email.com">unknown@email.com</a>
+                <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+            </div>
+            <div class="footer_newsletter">
+                <h3>Newsletter</h3>
+                <div class="footer_newsletter_box">
+                    <p>Subscribe to our newsletter</p>
+                    <form class="newsletter_subscribe_form" action="">
+                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                        <input type="submit" value="">
+                    </form>
+                </div>
+            </div>
         </div>
-        <div id="footer_quick_links">
-            <h3>Quick Links</h3>
-            <a href="./">Home</a>
-            <a href="./about_us">About Us</a>
-            <a href="./services">Services</a>
-            <a href="./resources">Resources</a>
-            <a href="./contact_us">Contact Us</a>
-        </div>
-        <div id="footer_contact">
-            <h3>Contact Us</h3>
-            <a href="tel:614-555-5555">614-555-5555</a>
-            <a href="mailto:unknown@email.com">unknown@email.com</a>
-            <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+        <div id="footer_bottom_mobile">
+            <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+            <div class="footer_contact">
+                <h3>Contact</h3>
+                <a href="tel:614-555-5555">614-555-5555</a>
+                <a href="mailto:unknown@email.com">unknown@email.com</a>
+                <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+            </div>
+            <div class="footer_quick_links">
+                <h3>Links</h3>
+                <nav>
+                    <a href="./">Home</a>
+                    <a href="./contact_us.html">Contact Us</a>
+                    <a href="./services.html">Services</a>
+                    <a href="./about_us.html">About Us</a>
+                    <a href="./resources.html">Resources</a>
+                </nav>
+            </div>
+            <div class="social_media">
+                <h3>Social Media</h3>
+                <div class="social_media_icons">
+                    <a href=""><img src="images/facebook_icon.svg" alt="Facebook logo"></a>
+                </div>
+            </div>
+            <div class="footer_newsletter">
+                <h3>Newsletter</h3>
+                <div class="footer_newsletter_box">
+                    <p>Subscribe to our newsletter</p>
+                    <form class="newsletter_subscribe_form" action="">
+                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                        <input type="submit" value="">
+                    </form>
+                </div>
+            </div>
         </div>
     </footer>
+    <script src="index.js"></script>
 </body>
 
 </html>
