--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p>Short time relief from home care so that primary caregiver can take a break</p>
                     <a class="more_details_btn" href="./services/respite_care.html">
                         More Details
-                        <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
+                        <img src="./images/red_arrow.svg" alt="red arrow font"><img src="./images/red_arrow.svg"
                             alt="red arrow font">
                     </a>
                 </div>
@@ -109,7 +109,7 @@
                     <p>Various other needs such as grocery shopping and other errands</p>
                     <a class="more_details_btn" href="./services/miscellaneous.html">
                         More Details
-                        <img src="./images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
+                        <img src="./images/red_arrow.svg" alt="red arrow font"><img src="./images/red_arrow.svg"
                             alt="red arrow font">
                     </a>
                 </div>
