Reduced size of most images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 of our patients, both for the present and future.</p>
             <div id="services">
                 <div class="service">
-                    <img src="./images/person_care_nurse.png" alt="personal care picture">
+                    <img src="./images/nurse-retirement-home-listening-old-sick-man-heart-bead-pensioner-lies-hospital-bed-resize.jpg" alt="personal care picture">
                     <h3>Personal Care</h3>
                     <p>Non-medical assistance with daily living activities including helping with personal hygiene</p>
                     <a class="more_details_btn" href="./services/personal_care.html">
@@ -64,7 +64,7 @@
 
                 </div>
                 <div class="service">
-                    <img src="./images/house_keeping.png" alt="housekeeping/homemaking picture">
+                    <img src="./images/house_keeping.webp" alt="housekeeping/homemaking picture">
                     <h3>Homemaking/Housekeeping</h3>
                     <p>Assistance around the house with tasks such as cleaning, laundry, and cooking</p>
                     <a class="more_details_btn" href="./services/housekeeping.html">
@@ -74,7 +74,7 @@
                     </a>
                 </div>
                 <div class="service">
-                    <img src="./images/respite_care.jpg" alt="respite care picture">
+                    <img src="./images/respite_care.webp" alt="respite care picture">
                     <h3>Respite Care</h3>
                     <p>Short time relief from home care so that primary caregiver can take a break</p>
                     <a class="more_details_btn" href="./services/respite_care.html">
@@ -84,7 +84,7 @@
                     </a>
                 </div>
                 <div class="service">
-                    <img src="./images/home_visits.jpg" alt="home visits picture">
+                    <img src="./images/home_visits_pic.webp" alt="home visits picture">
                     <h3>Home Visits</h3>
                     <p>description</p>
                     <a class="more_details_btn" href="./services/home_visits.html">
@@ -94,7 +94,7 @@
                     </a>
                 </div>
                 <div class="service">
-                    <img src="./images/chore.jpg" alt="intermittent chores picture">
+                    <img src="./images/chore.webp" alt="intermittent chores picture">
                     <h3>Intermittent Chores</h3>
                     <p>We offer intermittent chore services including clearing snow and cutting grass</p>
                     <a class="more_details_btn" href="./services/intermittent_chores.html">
@@ -104,7 +104,7 @@
                     </a>
                 </div>
                 <div class="service">
-                    <img src="./images/miscellaneous.jpg" alt="miscellaneous care picture">
+                    <img src="./images/miscellaneous.webp" alt="miscellaneous care picture">
                     <h3>Miscellaneous</h3>
                     <p>Various other needs such as grocery shopping and other errands</p>
                     <a class="more_details_btn" href="./services/miscellaneous.html">
@@ -196,7 +196,7 @@
             <p>Talk to us about anything</p>
             <div id="contact_us_box">
                 <div id="contact_us_left">
-                    <img src="./images/smiling-young-blonde-female-doctor-wearing-medical-robe-stethoscope-around-neck-looking-pointing-side 1.png"
+                    <img src="./images/smiling_nurse.webp"
                         alt="">
                 </div>
                 <div id="contact_us_right">
@@ -245,7 +245,7 @@
                 </form>
             </div>
             <div id="newsletter_subscribe_right">
-                <img src="./images/newsletter_handholding.png" alt="">
+                <img src="./images/newsletter_handholding.webp" alt="">
             </div>
         </div>
         <div id="footer_bottom">
