shrinked images sizes more

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 of our patients, both for the present and future.</p>
             <div id="services">
                 <div class="service">
-                    <img src="./images/nurse-retirement-home-listening-old-sick-man-heart-bead-pensioner-lies-hospital-bed-resize.jpg" alt="personal care picture">
+                    <img src="./images/personal_care.jpg" alt="personal care picture">
                     <h3>Personal Care</h3>
                     <p>Non-medical assistance with daily living activities including helping with personal hygiene</p>
                     <a class="more_details_btn" href="./services/personal_care.html">
@@ -157,7 +157,7 @@
 
         <div id="about_us_section">
             <div id="about_us_left">
-                <img src="./images/about_us_pics_web.png" alt="About us pics">
+                <img src="./images/about_us_pics_web.webp" alt="About us pics">
                 <!-- <img src="images/nurse_with_man_in_wheelchair.png" alt="Nurse with elder man in wheelchair">
                 <img src="images/elderly_woman_pushed_in_wheelchair.png" alt="ELderly woman being pushed in a wheelchair"> -->
             </div>
