fixed background imags for services page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 </div>
                 <div class="service">
-                    <img src="./images/house_keeping.webp" alt="housekeeping/homemaking picture">
+                    <img src="./images/housekeeping.webp" alt="housekeeping/homemaking picture">
                     <h3>Homemaking/Housekeeping</h3>
                     <p>Assistance around the house with tasks such as cleaning, laundry, and cooking</p>
                     <a class="more_details_btn" href="./services/housekeeping.html">
