Made a number of mobile design changes

--- a/appointment.html
+++ b/appointment.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -13,11 +14,35 @@
         <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
         <img id="menu_bar" src="images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
         <nav id="nav_area">
-            <a class="selected_nav_item" href="./">Home</a>
-            <a href="./about_us.html">About Us</a>
-            <a href="./services.html">Services</a>
-            <a href="./resources.html">Resources</a>
-            <a href="./contact_us.html">Contact Us</a>
+            <img id="close_icon" src="./images/close_icon.svg" alt="" onclick="handleCloseButtonClick()">
+
+            <h3>Merve Care</h3>
+
+            <a href="./">
+                <img src="./images/home_icon.svg" alt="home icon" class="">
+                Home
+            </a>
+            <hr>
+            <a href="./about_us.html">
+                <img src="./images/about_us_icon.svg" alt="about us icon" class="">
+                About Us
+            </a>
+            <hr>
+            <a href="./services.html">
+                <img src="./images/service_icon.svg" alt="service icon" class="">
+                Services
+            </a>
+            <hr>
+            <a href="./resources.html">
+                <img src="./images/resources_icon.svg" alt="resources icon" class="">
+                Resources
+            </a>
+            <hr>
+            <a href="./contact_us.html">
+                <img src="./images/contact_us_icon.svg" alt="contact us icon" class="">
+                Contact Us
+            </a>
+            <hr>
         </nav>
     </header>
 
