--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -14,11 +15,35 @@
         <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
         <img id="menu_bar" src="./images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
         <nav id="nav_area">
-            <a class="selected_nav_item" href="./">Home</a>
-            <a href="./about_us.html">About Us</a>
-            <a href="./services.html">Services</a>
-            <a href="./resources.html">Resources</a>
-            <a href="./contact_us.html">Contact Us</a>
+            <img id="close_icon" src="./images/close_icon.svg" alt="" onclick="handleCloseButtonClick()">
+
+            <h3>Merve Care</h3>
+
+            <a class="selected_nav_item" href="./">
+                <img src="./images/home_icon.svg" alt="home icon" class="">
+                Home
+            </a>
+            <hr>
+            <a href="./about_us.html">
+                <img src="./images/about_us_icon.svg" alt="about us icon" class="">
+                About Us
+            </a>
+            <hr>
+            <a href="./services.html">
+                <img src="./images/service_icon.svg" alt="service icon" class="">
+                Services
+            </a>
+            <hr>
+            <a href="./resources.html">
+                <img src="./images/resources_icon.svg" alt="resources icon" class="">
+                Resources
+            </a>
+            <hr>
+            <a href="./contact_us.html">
+                <img src="./images/contact_us_icon.svg" alt="contact us icon" class="">
+                Contact Us
+            </a>
+            <hr>
         </nav>
     </header>
 
@@ -172,7 +197,8 @@
                     odit illum, nisi suscipit, blanditiis accusamus facere sed eius illo natus tenetur voluptates itaque
                     aut dolores.</p>
                 <div class="mission_visions">
-                    <img class="mission_vision_font" src="./images/person-circle-question-solid 1.svg" alt="mission font">
+                    <img class="mission_vision_font" src="./images/person-circle-question-solid 1.svg"
+                        alt="mission font">
                     <div class="mission_vision_texts">
                         <h4>Our Mission</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis numquam libero iusto
@@ -196,8 +222,7 @@
             <p>Talk to us about anything</p>
             <div id="contact_us_box">
                 <div id="contact_us_left">
-                    <img src="./images/smiling_nurse.webp"
-                        alt="">
+                    <img src="./images/smiling_nurse.webp" alt="">
                 </div>
                 <div id="contact_us_right">
                     <form action="">
