Made service page more responsive among other style changes

--- a/appointment.html
+++ b/appointment.html
@@ -78,12 +78,18 @@
             </div>
             <div id="contact_method_field" class="form_row">
                 <label>Preferred method of contact:</label>
-                <input type="radio" name="contact_method" value="Phone Call">
-                <label class="radio_label" for="phone_call">Phone Call</label>
-                <input type="radio" name="contact_method" value="Text message">
-                <label class="radio_label" for="text_message">Text Message</label>
-                <input type="radio" name="contact_method" value="Email">
-                <label class="radio_label" for="email">Email</label>
+                <div>
+                    <input type="radio" name="contact_method" value="Phone Call">
+                    <label class="radio_label" for="phone_call">Phone Call</label>
+                </div>
+                <div>
+                    <input type="radio" name="contact_method" value="Text message">
+                    <label class="radio_label" for="text_message">Text Message</label>
+                </div>
+                <div>
+                    <input type="radio" name="contact_method" value="Email">
+                    <label class="radio_label" for="email">Email</label>
+                </div>
             </div>
             <div class="form_row form_field">
                 <label for="message">Your message:</label>
