--- a/services/personal_care.html
+++ b/services/personal_care.html
@@ -27,7 +27,7 @@
                 About Us
             </a>
             <hr>
-            <a href="../services.html">
+            <a class="selected_nav_item" href="../services.html">
                 <img src="../images/service_icon.svg" alt="service icon" class="">
                 Services
             </a>
