--- a/about_us.html
+++ b/about_us.html
@@ -1,96 +1,153 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./about_us.css" />
+    <title>About Us</title>
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./about_us.css">
-  <title>About Us</title>
-  <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
-</head>
+  <body>
+    <header>
+      <a id="logo" href="./"><img src="./images/logo.png" alt="LOGO" /></a>
+      <img
+        id="menu_bar"
+        src="images/menu_bars.svg"
+        alt="menu bars"
+        onclick="handleMenuClick()"
+      />
+      <nav id="nav_area">
+        <img
+          id="close_icon"
+          src="./images/close_icon.svg"
+          alt=""
+          onclick="handleCloseButtonClick()"
+        />
 
-<body>
-  <header>
-    <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-    <img id="menu_bar" src="images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
-    <nav id="nav_area">
-      <img id="close_icon" src="./images/close_icon.svg" alt="" onclick="handleCloseButtonClick()">
+        <h3>Merve Care</h3>
 
-      <h3>Merve Care</h3>
-
-      <a href="./">
-          <img src="./images/home_icon.svg" alt="home icon" class="">
+        <a href="./">
+          <img src="./images/home_icon.svg" alt="home icon" class="" />
           Home
-      </a>
-      <hr>
-      <a class="selected_nav_item" href="./about_us.html">
-          <img src="./images/about_us_icon.svg" alt="about us icon" class="">
+        </a>
+        <hr />
+        <a class="selected_nav_item" href="./about_us.html">
+          <img src="./images/about_us_icon.svg" alt="about us icon" class="" />
           About Us
-      </a>
-      <hr>
-      <a href="./services.html">
-          <img src="./images/service_icon.svg" alt="service icon" class="">
+        </a>
+        <hr />
+        <a href="./services.html">
+          <img src="./images/service_icon.svg" alt="service icon" class="" />
           Services
-      </a>
-      <hr>
-      <a href="./resources.html">
-          <img src="./images/resources_icon.svg" alt="resources icon" class="">
+        </a>
+        <hr />
+        <a href="./resources.html">
+          <img
+            src="./images/resources_icon.svg"
+            alt="resources icon"
+            class=""
+          />
           Resources
-      </a>
-      <hr>
-      <a href="./contact_us.html">
-          <img src="./images/contact_us_icon.svg" alt="contact us icon" class="">
+        </a>
+        <hr />
+        <a href="./contact_us.html">
+          <img
+            src="./images/contact_us_icon.svg"
+            alt="contact us icon"
+            class=""
+          />
           Contact Us
-      </a>
-      <hr>
-  </nav>
-  </header>
+        </a>
+        <hr />
+      </nav>
+    </header>
 
-  <main>
-    <div id="about_top_section" class='top_section'>
-      <h1>About Merve Care LLC</h1>
-      <!-- <span id="breadcrumb">
+    <main>
+      <div id="about_top_section" class="top_section">
+        <h1>About Merve Care LLC</h1>
+        <!-- <span id="breadcrumb">
         <a href="../services.html">About Us</a>
       </span> -->
-    </div>
-    <div>
-      <div id="about_us_section">
-        <div id="about_us_left">
-          <img src="images/about_us_pics_web.png" alt="About us pics">
-          <!-- <img src="images/nurse_with_man_in_wheelchair.png" alt="Nurse with elder man in wheelchair">
-            <img src="images/elderly_woman_pushed_in_wheelchair.png" alt="ELderly woman being pushed in a wheelchair"> -->
-        </div>
-        <div id="about_us_right">
-          <h2>
-            About Us
-          </h2>
-          <p>Some stuff about us Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ducimus odio
-            laudantium eligendi unde aspernatur voluptates culpa similique aut mollitia, quaerat voluptatem
-            maxime hic numquam iusto, iure repellat doloribus quis.</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet magnam vel voluptatem corrupti eum
-            odit illum, nisi suscipit, blanditiis accusamus facere sed eius illo natus tenetur voluptates itaque
-            aut dolores.</p>
-          <div class="mission_visions">
-            <img class="mission_vision_font" src="images/person-circle-question-solid 1.svg" alt="mission font">
-            <div class="mission_vision_texts">
-              <h4>Our Mission</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis numquam libero iusto
-                possimus repellendus blanditiis laboriosam ipsam?</p>
-            </div>
-          </div>
-          <div class="mission_visions">
-            <img class="mission_vision_font" src="images/bullseye-solid 1.svg" alt="vision font">
-            <div class="mission_vision_texts">
-              <h4>Our Vision</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum facilis ut saepe ad
-                facere, dicta perspiciatis hic commodi temporibus veritatis!.</p>
-            </div>
-          </div>
-          <a class="action_btn" href="/about_us.html">Learn More</a>
-        </div>
       </div>
-      <!-- <img src="https://dummyimage.com/300x300/9e6e9e/bdbfde&text=Nice+image" alt="about us" />
+      <div>
+        <div id="about_us_section">
+          <div id="about_us_left">
+            <img src="images/about_us_pics_web.png" alt="About us pics" />
+          </div>
+          <div id="about_us_right">
+            <h2>About Us</h2>
+            <p>
+              Some stuff about us Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Fugit ducimus odio laudantium eligendi unde
+              aspernatur voluptates culpa similique aut mollitia, quaerat
+              voluptatem maxime hic numquam iusto, iure repellat doloribus quis.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+              magnam vel voluptatem corrupti eum odit illum, nisi suscipit,
+              blanditiis accusamus facere sed eius illo natus tenetur voluptates
+              itaque aut dolores.
+            </p>
+            <div class="mission_visions">
+              <img
+                class="mission_vision_font"
+                src="images/person-circle-question-solid 1.svg"
+                alt="mission font"
+              />
+              <div class="mission_vision_texts">
+                <h4>Our Mission</h4>
+                <p>
+                  We are committed to providing high quality and client-centered
+                  services/care to our clients to enable them to lead dignified
+                  and independent lives in the comfort and safety of their own
+                  homes.
+                </p>
+                <p>
+                  In consultation with the client and/or their family, their
+                  individual needs are carefully assessed, understood and met
+                  through the selective assignment of qualified, honorable and
+                  compassionate Direct Care Workers.
+                </p>
+              </div>
+            </div>
+            <div class="mission_visions">
+              <img
+                class="mission_vision_font"
+                src="images/bullseye-solid 1.svg"
+                alt="vision font"
+              />
+              <div class="mission_vision_texts">
+                <h4>Our Vision</h4>
+                <p>
+                  Our vision is to have a reputation for providing the highest
+                  standard of in-home care services. Thes high standards include
+                </p>
+                <ul>
+                  <li>
+                    Earning and maintaining our clients’ satisfaction, trust and
+                    loyalty.
+                  </li>
+                  <li>
+                    Providing skilled Direct Care Workers who have compassion
+                    and integrity.
+                  </li>
+                  <li>
+                    Ensuring Direct Care Workers remain competent through
+                    regular, ongoing testing and training.
+                  </li>
+                  <li>Complying with relevant government regulations.</li>
+                  <li>
+                    Being known as the home care agency-of-choice in our area of
+                    service.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <img src="https://dummyimage.com/300x300/9e6e9e/bdbfde&text=Nice+image" alt="about us" />
       <h1>Learn about who we are</h1>
       <p>
         Founded in 2020, Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -135,98 +192,116 @@
           eget arcu.
         </p>
       </div> -->
-    </div>
-  </main>
+      </div>
+    </main>
 
-  <footer>
-    <div id="footer_top">
+    <footer>
+      <div id="footer_top">
         <div id="newsletter_subscribe_left">
-            <h2>Something Catchy</h2>
-            <h2>Something Else Catchy</h2>
-            <h3>Subscribe to our newsletter</h3>
-            <form class="newsletter_subscribe_form" action="">
-                <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                <input type="submit" value="">
-            </form>
+          <h2>Something Catchy</h2>
+          <h2>Something Else Catchy</h2>
+          <h3>Subscribe to our newsletter</h3>
+          <form class="newsletter_subscribe_form" action="">
+            <input
+              type="text"
+              name="newsletter_email"
+              id=""
+              placeholder="Enter your email..."
+            />
+            <input type="submit" value="" />
+          </form>
         </div>
         <div id="newsletter_subscribe_right">
-            <img src="images/newsletter_handholding.png" alt="">
+          <img src="images/newsletter_handholding.png" alt="" />
         </div>
-    </div>
-    <div id="footer_bottom">
+      </div>
+      <div id="footer_bottom">
         <div class="logo_social">
-            <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-            <div class="social_media">
-                <p>Social Media</p>
-                <div class="social_media_icons">
-                    <img src="images/facebook_icon.svg" alt="Facebook logo">
-                </div>
+          <a class="footer_logo" href="./"
+            ><img src="./images/logo.png" alt="LOGO"
+          /></a>
+          <div class="social_media">
+            <p>Social Media</p>
+            <div class="social_media_icons">
+              <img src="images/facebook_icon.svg" alt="Facebook logo" />
             </div>
+          </div>
         </div>
         <div class="footer_quick_links">
-            <h3>Links</h3>
-            <nav>
-                <a href="./">Home</a>
-                <a href="./contact_us.html">Contact Us</a>
-                <a href="./services.html">Services</a>
-                <a href="./about_us.html">About Us</a>
-                <a href="./resources.html">Resources</a>
-            </nav>
+          <h3>Links</h3>
+          <nav>
+            <a href="./">Home</a>
+            <a href="./contact_us.html">Contact Us</a>
+            <a href="./services.html">Services</a>
+            <a href="./about_us.html">About Us</a>
+            <a href="./resources.html">Resources</a>
+          </nav>
         </div>
         <div class="footer_contact">
-            <h3>Contact</h3>
-            <a href="tel:614-555-5555">614-555-5555</a>
-            <a href="mailto:unknown@email.com">unknown@email.com</a>
-            <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+          <h3>Contact</h3>
+          <a href="tel:614-555-5555">614-555-5555</a>
+          <a href="mailto:mervecarellc@gmail.com">mervecarellc@gmail.com</a>
         </div>
         <div class="footer_newsletter">
-            <h3>Newsletter</h3>
-            <div class="footer_newsletter_box">
-                <p>Subscribe to our newsletter</p>
-                <form class="newsletter_subscribe_form" action="">
-                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                    <input type="submit" value="">
-                </form>
-            </div>
+          <h3>Newsletter</h3>
+          <div class="footer_newsletter_box">
+            <p>Subscribe to our newsletter</p>
+            <form class="newsletter_subscribe_form" action="">
+              <input
+                type="text"
+                name="newsletter_email"
+                id=""
+                placeholder="Enter your email..."
+              />
+              <input type="submit" value="" />
+            </form>
+          </div>
         </div>
-    </div>
-    <div id="footer_bottom_mobile">
-        <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
+      </div>
+      <div id="footer_bottom_mobile">
+        <a class="footer_logo" href="./"
+          ><img src="./images/logo.png" alt="LOGO"
+        /></a>
         <div class="footer_contact">
-            <h3>Contact</h3>
-            <a href="tel:614-555-5555">614-555-5555</a>
-            <a href="mailto:unknown@email.com">unknown@email.com</a>
-            <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+          <h3>Contact</h3>
+          <a href="tel:614-555-5555">614-555-5555</a>
+          <a href="mailto:mervecarellc@gmail.com">mervecarellc@gmail.com</a>
         </div>
         <div class="footer_quick_links">
-            <h3>Links</h3>
-            <nav>
-                <a href="./">Home</a>
-                <a href="./contact_us.html">Contact Us</a>
-                <a href="./services.html">Services</a>
-                <a href="./about_us.html">About Us</a>
-                <a href="./resources.html">Resources</a>
-            </nav>
+          <h3>Links</h3>
+          <nav>
+            <a href="./">Home</a>
+            <a href="./contact_us.html">Contact Us</a>
+            <a href="./services.html">Services</a>
+            <a href="./about_us.html">About Us</a>
+            <a href="./resources.html">Resources</a>
+          </nav>
         </div>
         <div class="social_media">
-            <h3>Social Media</h3>
-            <div class="social_media_icons">
-                <a href=""><img src="images/facebook_icon.svg" alt="Facebook logo" ></a>
-            </div>
+          <h3>Social Media</h3>
+          <div class="social_media_icons">
+            <a href=""
+              ><img src="images/facebook_icon.svg" alt="Facebook logo"
+            /></a>
+          </div>
         </div>
         <div class="footer_newsletter">
-            <h3>Newsletter</h3>
-            <div class="footer_newsletter_box">
-                <p>Subscribe to our newsletter</p>
-                <form class="newsletter_subscribe_form" action="">
-                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                    <input type="submit" value="">
-                </form>
-            </div>
+          <h3>Newsletter</h3>
+          <div class="footer_newsletter_box">
+            <p>Subscribe to our newsletter</p>
+            <form class="newsletter_subscribe_form" action="">
+              <input
+                type="text"
+                name="newsletter_email"
+                id=""
+                placeholder="Enter your email..."
+              />
+              <input type="submit" value="" />
+            </form>
+          </div>
         </div>
-    </div>
-</footer>
-  <script src="index.js"></script>
-</body>
-
+      </div>
+    </footer>
+    <script src="index.js"></script>
+  </body>
 </html>
