--- a/resources.html
+++ b/resources.html
@@ -1,177 +1,244 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./resources.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./resources.css" />
     <title>Resources</title>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-</head>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-        <img id="menu_bar" src="images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
-        <nav id="nav_area">
-            <img id="close_icon" src="./images/close_icon.svg" alt="" onclick="handleCloseButtonClick()">
+      <a id="logo" href="./"><img src="./images/logo.png" alt="LOGO" /></a>
+      <img
+        id="menu_bar"
+        src="images/menu_bars.svg"
+        alt="menu bars"
+        onclick="handleMenuClick()"
+      />
+      <nav id="nav_area">
+        <img
+          id="close_icon"
+          src="./images/close_icon.svg"
+          alt=""
+          onclick="handleCloseButtonClick()"
+        />
 
-            <h3>Merve Care</h3>
+        <h3>Merve Care</h3>
 
-            <a href="./">
-                <img src="./images/home_icon.svg" alt="home icon" class="">
-                Home
-            </a>
-            <hr>
-            <a href="./about_us.html">
-                <img src="./images/about_us_icon.svg" alt="about us icon" class="">
-                About Us
-            </a>
-            <hr>
-            <a href="./services.html">
-                <img src="./images/service_icon.svg" alt="service icon" class="">
-                Services
-            </a>
-            <hr>
-            <a class="selected_nav_item" href="./resources.html">
-                <img src="./images/resources_icon.svg" alt="resources icon" class="">
-                Resources
-            </a>
-            <hr>
-            <a href="./contact_us.html">
-                <img src="./images/contact_us_icon.svg" alt="contact us icon" class="">
-                Contact Us
-            </a>
-            <hr>
-        </nav>
+        <a href="./">
+          <img src="./images/home_icon.svg" alt="home icon" class="" />
+          Home
+        </a>
+        <hr />
+        <a href="./about_us.html">
+          <img src="./images/about_us_icon.svg" alt="about us icon" class="" />
+          About Us
+        </a>
+        <hr />
+        <a href="./services.html">
+          <img src="./images/service_icon.svg" alt="service icon" class="" />
+          Services
+        </a>
+        <hr />
+        <a class="selected_nav_item" href="./resources.html">
+          <img
+            src="./images/resources_icon.svg"
+            alt="resources icon"
+            class=""
+          />
+          Resources
+        </a>
+        <hr />
+        <a href="./contact_us.html">
+          <img
+            src="./images/contact_us_icon.svg"
+            alt="contact us icon"
+            class=""
+          />
+          Contact Us
+        </a>
+        <hr />
+      </nav>
     </header>
 
     <main>
-        <div id="resources_top_section" class='top_section'>
-            <h1>Resources</h1>
+      <div id="resources_top_section" class="top_section">
+        <h1>Resources</h1>
+      </div>
+      <p>
+        Below are a list of resources for the elderly and others needing
+        support. Please reach out these sites for more information or if looking
+        for support. Also feel free to contact us at 614-555-5555 for support as
+        well.
+      </p>
+      <ul id="resources_list">
+        <div>
+          <a
+            href="https://www.alz.org/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Alzheimer's Association -</a
+          >
+          <p>www.alz.org</p>
         </div>
-        <p>Below are a list of resources for the elderly and others needing support. Please reach out these sites for
-            more information or if looking for support. Also feel free to contact us at 614-555-5555 for support as
-            well.</p>
-        <ul id="resources_list">
-            <div>
-                <a href="https://www.alz.org/" target="_blank" rel="noopener noreferrer">Alzheimer's Association -</a>
-                <p>www.alz.org</p>
-            </div>
-            <div><a href="https://www.cms.gov/" target="_blank" rel="noopener noreferrer">Center for Medicare &
-                    Medicaid -</a>
-                <p>www.cms.gov</p>
-            </div>
-            <div><a href="https://www.mayoclinic.org/" target="_blank" rel="noopener noreferrer">Mayo Clinic -</a>
-                <p>www.mayoclinic.org</p>
-            </div>
-            <div>
-                <a href="https://www.caregiving.org/" target="_blank" rel="noopener noreferrer">National Alliance for
-                    Caregiving -</a>
-                <p>www.caregiving.org</p>
-            </div>
-            <div>
-                <a href="https://www.nia.nih.gov/" target="_blank" rel="noopener noreferrer">National Institute on
-                    Aging -</a>
-                <p>www.nia.nih.gov</p>
-            </div>
-            <div><a href="https://www.va.gov/communitycare/" target="_blank" rel="noopener noreferrer">US Department of
-                    Veterans Affairs -</a>
-                <p>www.va.gov/communitycare</p>
-            </div>
-        </ul>
+        <div>
+          <a
+            href="https://www.cms.gov/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Center for Medicare & Medicaid -</a
+          >
+          <p>www.cms.gov</p>
+        </div>
+        <div>
+          <a
+            href="https://www.mayoclinic.org/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Mayo Clinic -</a
+          >
+          <p>www.mayoclinic.org</p>
+        </div>
+        <div>
+          <a
+            href="https://www.caregiving.org/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >National Alliance for Caregiving -</a
+          >
+          <p>www.caregiving.org</p>
+        </div>
+        <div>
+          <a
+            href="https://www.nia.nih.gov/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >National Institute on Aging -</a
+          >
+          <p>www.nia.nih.gov</p>
+        </div>
+        <div>
+          <a
+            href="https://www.va.gov/communitycare/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >US Department of Veterans Affairs -</a
+          >
+          <p>www.va.gov/communitycare</p>
+        </div>
+      </ul>
     </main>
 
     <footer>
-        <div id="footer_top">
-            <div id="newsletter_subscribe_left">
-                <h2>Something Catchy</h2>
-                <h2>Something Else Catchy</h2>
-                <h3>Subscribe to our newsletter</h3>
-                <form class="newsletter_subscribe_form" action="">
-                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                    <input type="submit" value="">
-                </form>
-            </div>
-            <div id="newsletter_subscribe_right">
-                <img src="images/newsletter_handholding.png" alt="">
-            </div>
+      <div id="footer_top">
+        <div id="newsletter_subscribe_left">
+          <h2>Something Catchy</h2>
+          <h2>Something Else Catchy</h2>
+          <h3>Subscribe to our newsletter</h3>
+          <form class="newsletter_subscribe_form" action="">
+            <input
+              type="text"
+              name="newsletter_email"
+              id=""
+              placeholder="Enter your email..."
+            />
+            <input type="submit" value="" />
+          </form>
         </div>
-        <div id="footer_bottom">
-            <div class="logo_social">
-                <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-                <div class="social_media">
-                    <p>Social Media</p>
-                    <div class="social_media_icons">
-                        <img src="images/facebook_icon.svg" alt="Facebook logo">
-                    </div>
-                </div>
-            </div>
-            <div class="footer_quick_links">
-                <h3>Links</h3>
-                <nav>
-                    <a href="./">Home</a>
-                    <a href="./contact_us.html">Contact Us</a>
-                    <a href="./services.html">Services</a>
-                    <a href="./about_us.html">About Us</a>
-                    <a href="./resources.html">Resources</a>
-                </nav>
-            </div>
-            <div class="footer_contact">
-                <h3>Contact</h3>
-                <a href="tel:614-555-5555">614-555-5555</a>
-                <a href="mailto:unknown@email.com">unknown@email.com</a>
-                <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
-            </div>
-            <div class="footer_newsletter">
-                <h3>Newsletter</h3>
-                <div class="footer_newsletter_box">
-                    <p>Subscribe to our newsletter</p>
-                    <form class="newsletter_subscribe_form" action="">
-                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                        <input type="submit" value="">
-                    </form>
-                </div>
-            </div>
+        <div id="newsletter_subscribe_right">
+          <img src="images/newsletter_handholding.png" alt="" />
         </div>
-        <div id="footer_bottom_mobile">
-            <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-            <div class="footer_contact">
-                <h3>Contact</h3>
-                <a href="tel:614-555-5555">614-555-5555</a>
-                <a href="mailto:unknown@email.com">unknown@email.com</a>
-                <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+      </div>
+      <div id="footer_bottom">
+        <div class="logo_social">
+          <a class="footer_logo" href="./"
+            ><img src="./images/logo.png" alt="LOGO"
+          /></a>
+          <div class="social_media">
+            <p>Social Media</p>
+            <div class="social_media_icons">
+              <img src="images/facebook_icon.svg" alt="Facebook logo" />
             </div>
-            <div class="footer_quick_links">
-                <h3>Links</h3>
-                <nav>
-                    <a href="./">Home</a>
-                    <a href="./contact_us.html">Contact Us</a>
-                    <a href="./services.html">Services</a>
-                    <a href="./about_us.html">About Us</a>
-                    <a href="./resources.html">Resources</a>
-                </nav>
-            </div>
-            <div class="social_media">
-                <h3>Social Media</h3>
-                <div class="social_media_icons">
-                    <a href=""><img src="images/facebook_icon.svg" alt="Facebook logo"></a>
-                </div>
-            </div>
-            <div class="footer_newsletter">
-                <h3>Newsletter</h3>
-                <div class="footer_newsletter_box">
-                    <p>Subscribe to our newsletter</p>
-                    <form class="newsletter_subscribe_form" action="">
-                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                        <input type="submit" value="">
-                    </form>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="footer_quick_links">
+          <h3>Links</h3>
+          <nav>
+            <a href="./">Home</a>
+            <a href="./contact_us.html">Contact Us</a>
+            <a href="./services.html">Services</a>
+            <a href="./about_us.html">About Us</a>
+            <a href="./resources.html">Resources</a>
+          </nav>
+        </div>
+        <div class="footer_contact">
+          <h3>Contact</h3>
+          <a href="tel:614-555-5555">614-555-5555</a>
+          <a href="mailto:mervecarellc@gmail.com">mervecarellc@gmail.com</a>
+        </div>
+        <div class="footer_newsletter">
+          <h3>Newsletter</h3>
+          <div class="footer_newsletter_box">
+            <p>Subscribe to our newsletter</p>
+            <form class="newsletter_subscribe_form" action="">
+              <input
+                type="text"
+                name="newsletter_email"
+                id=""
+                placeholder="Enter your email..."
+              />
+              <input type="submit" value="" />
+            </form>
+          </div>
+        </div>
+      </div>
+      <div id="footer_bottom_mobile">
+        <a class="footer_logo" href="./"
+          ><img src="./images/logo.png" alt="LOGO"
+        /></a>
+        <div class="footer_contact">
+          <h3>Contact</h3>
+          <a href="tel:614-555-5555">614-555-5555</a>
+          <a href="mailto:mervecarellc@gmail.com">mervecarellc@gmail.com</a>
+        </div>
+        <div class="footer_quick_links">
+          <h3>Links</h3>
+          <nav>
+            <a href="./">Home</a>
+            <a href="./contact_us.html">Contact Us</a>
+            <a href="./services.html">Services</a>
+            <a href="./about_us.html">About Us</a>
+            <a href="./resources.html">Resources</a>
+          </nav>
+        </div>
+        <div class="social_media">
+          <h3>Social Media</h3>
+          <div class="social_media_icons">
+            <a href=""
+              ><img src="images/facebook_icon.svg" alt="Facebook logo"
+            /></a>
+          </div>
+        </div>
+        <div class="footer_newsletter">
+          <h3>Newsletter</h3>
+          <div class="footer_newsletter_box">
+            <p>Subscribe to our newsletter</p>
+            <form class="newsletter_subscribe_form" action="">
+              <input
+                type="text"
+                name="newsletter_email"
+                id=""
+                placeholder="Enter your email..."
+              />
+              <input type="submit" value="" />
+            </form>
+          </div>
+        </div>
+      </div>
     </footer>
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
