--- a/services.html
+++ b/services.html
@@ -1,192 +1,253 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./services.css">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./services.css" />
     <title>Services</title>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    </style>
-</head>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-        <img id="menu_bar" src="images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
-        <nav id="nav_area">
-            <img id="close_icon" src="./images/close_icon.svg" alt="" onclick="handleCloseButtonClick()">
+      <a id="logo" href="./"><img src="./images/logo.png" alt="LOGO" /></a>
+      <img
+        id="menu_bar"
+        src="images/menu_bars.svg"
+        alt="menu bars"
+        onclick="handleMenuClick()"
+      />
+      <nav id="nav_area">
+        <img
+          id="close_icon"
+          src="./images/close_icon.svg"
+          alt=""
+          onclick="handleCloseButtonClick()"
+        />
 
-            <h3>Merve Care</h3>
+        <h3>Merve Care</h3>
 
-            <a href="./">
-                <img src="./images/home_icon.svg" alt="home icon" class="">
-                Home
-            </a>
-            <hr>
-            <a href="./about_us.html">
-                <img src="./images/about_us_icon.svg" alt="about us icon" class="">
-                About Us
-            </a>
-            <hr>
-            <a class="selected_nav_item" href="./services.html">
-                <img src="./images/service_icon.svg" alt="service icon" class="">
-                Services
-            </a>
-            <hr>
-            <a href="./resources.html">
-                <img src="./images/resources_icon.svg" alt="resources icon" class="">
-                Resources
-            </a>
-            <hr>
-            <a href="./contact_us.html">
-                <img src="./images/contact_us_icon.svg" alt="contact us icon" class="">
-                Contact Us
-            </a>
-            <hr>
-        </nav>
+        <a href="./">
+          <img src="./images/home_icon.svg" alt="home icon" class="" />
+          Home
+        </a>
+        <hr />
+        <a href="./about_us.html">
+          <img src="./images/about_us_icon.svg" alt="about us icon" class="" />
+          About Us
+        </a>
+        <hr />
+        <a class="selected_nav_item" href="./services.html">
+          <img src="./images/service_icon.svg" alt="service icon" class="" />
+          Services
+        </a>
+        <hr />
+        <a href="./resources.html">
+          <img
+            src="./images/resources_icon.svg"
+            alt="resources icon"
+            class=""
+          />
+          Resources
+        </a>
+        <hr />
+        <a href="./contact_us.html">
+          <img
+            src="./images/contact_us_icon.svg"
+            alt="contact us icon"
+            class=""
+          />
+          Contact Us
+        </a>
+        <hr />
+      </nav>
     </header>
 
     <main>
-        <div id="services_top_section" class='top_section'>
-            <h1>Services</h1>
-            <!-- <span id="breadcrumb">
+      <div id="services_top_section" class="top_section">
+        <h1>Services</h1>
+        <!-- <span id="breadcrumb">
               <a href="../services.html">About Us</a>
             </span> -->
-          </div>
-        <div>
-            <p>
-                In the long run, seeking early help can make a tremendous difference in
-                your loved ones’ comfort and safety. That’s where we come in to help you
-                and your loved ones provide better home care solutions. Because of our
-                commitment, our services offer many families a great deal of peace of
-                mind, knowing that their loved ones are well taken care of. Our
-                caregivers are available to speak with you and your family to provide
-                the care you deserve.
-            </p>
-            <h3>Our services include:</h3>
-            <div id="services">
-                <a href="./services/personal_care.html" class="service" id="personal_care_service">
-                    <h3>Personal Care</h3>
-                </a>
-                <a href="./services/housekeeping.html" class="service" id="housekeeping_service">
-                    <h3>Homemaking/Housekeeping</h3>
-                </a>
-                <a href="./services/respite_care.html" class="service" id="respite_care_service">
-                    <h3>Respite Care</h3>
-                </a>
-                <a href="./services/home_visits.html" class="service" id="home_visit_service">
-                    <h3>Home Visits</h3>
-                </a>
-                <a href="./services/intermittent_chores.html" class="service" id="intermittent_chore_service">
-                    <h3>Intermittent Chores</h3>
-                </a>
-                <a href="./services/miscellaneous.html" class="service" id="miscellaneous_service">
-                    <h3>Miscellaneous</h3>
-                </a>
-            </div>
-            <h3>Other Services Offered</h3>
-            <ul>
-                <li>Home Visits</li>
-                <li>Finance/money management</li>
-                <li>Errands</li>
-                <li>Companionship</li>
-            </ul>
-            <p>Interested in receiving these care services and more? Please call <a
-                    href="tel:614-555-5555">614-555-5555</a> or <a href="./contact_us.html">send us a
-                    message Here</a></p>
+      </div>
+      <div>
+        <p>
+          In the long run, seeking early help can make a tremendous difference
+          in your loved ones’ comfort and safety. That’s where we come in to
+          help you and your loved ones provide better home care solutions.
+          Because of our commitment, our services offer many families a great
+          deal of peace of mind, knowing that their loved ones are well taken
+          care of. Our caregivers are available to speak with you and your
+          family to provide the care you deserve.
+        </p>
+        <h3>Our services include:</h3>
+        <div id="services">
+          <a
+            href="./services/personal_care.html"
+            class="service"
+            id="personal_care_service"
+          >
+            <h3>Personal Care</h3>
+          </a>
+          <a
+            href="./services/housekeeping.html"
+            class="service"
+            id="housekeeping_service"
+          >
+            <h3>Homemaking/Housekeeping</h3>
+          </a>
+          <a
+            href="./services/respite_care.html"
+            class="service"
+            id="respite_care_service"
+          >
+            <h3>Respite Care</h3>
+          </a>
+          <a
+            href="./services/home_visits.html"
+            class="service"
+            id="home_visit_service"
+          >
+            <h3>Home Visits</h3>
+          </a>
+          <a
+            href="./services/intermittent_chores.html"
+            class="service"
+            id="intermittent_chore_service"
+          >
+            <h3>Intermittent Chores</h3>
+          </a>
+          <a
+            href="./services/miscellaneous.html"
+            class="service"
+            id="miscellaneous_service"
+          >
+            <h3>Miscellaneous</h3>
+          </a>
         </div>
+        <h3>Other Services Offered</h3>
+        <ul>
+          <li>Home Visits</li>
+          <li>Finance/money management</li>
+          <li>Errands</li>
+          <li>Companionship</li>
+        </ul>
+        <p>
+          Interested in receiving these care services and more? Please call
+          <a href="tel:614-555-5555">614-555-5555</a> or
+          <a href="./contact_us.html">send us a message Here</a>
+        </p>
+      </div>
     </main>
 
     <footer>
-        <div id="footer_top">
-            <div id="newsletter_subscribe_left">
-                <h2>Something Catchy</h2>
-                <h2>Something Else Catchy</h2>
-                <h3>Subscribe to our newsletter</h3>
-                <form class="newsletter_subscribe_form" action="">
-                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                    <input type="submit" value="">
-                </form>
-            </div>
-            <div id="newsletter_subscribe_right">
-                <img src="images/newsletter_handholding.png" alt="">
-            </div>
+      <div id="footer_top">
+        <div id="newsletter_subscribe_left">
+          <h2>Something Catchy</h2>
+          <h2>Something Else Catchy</h2>
+          <h3>Subscribe to our newsletter</h3>
+          <form class="newsletter_subscribe_form" action="">
+            <input
+              type="text"
+              name="newsletter_email"
+              id=""
+              placeholder="Enter your email..."
+            />
+            <input type="submit" value="" />
+          </form>
         </div>
-        <div id="footer_bottom">
-            <div class="logo_social">
-                <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-                <div class="social_media">
-                    <p>Social Media</p>
-                    <div class="social_media_icons">
-                        <img src="images/facebook_icon.svg" alt="Facebook logo">
-                    </div>
-                </div>
-            </div>
-            <div class="footer_quick_links">
-                <h3>Links</h3>
-                <nav>
-                    <a href="./">Home</a>
-                    <a href="./contact_us.html">Contact Us</a>
-                    <a href="./services.html">Services</a>
-                    <a href="./about_us.html">About Us</a>
-                    <a href="./resources.html">Resources</a>
-                </nav>
-            </div>
-            <div class="footer_contact">
-                <h3>Contact</h3>
-                <a href="tel:614-555-5555">614-555-5555</a>
-                <a href="mailto:unknown@email.com">unknown@email.com</a>
-                <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
-            </div>
-            <div class="footer_newsletter">
-                <h3>Newsletter</h3>
-                <div class="footer_newsletter_box">
-                    <p>Subscribe to our newsletter</p>
-                    <form class="newsletter_subscribe_form" action="">
-                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                        <input type="submit" value="">
-                    </form>
-                </div>
-            </div>
+        <div id="newsletter_subscribe_right">
+          <img src="images/newsletter_handholding.png" alt="" />
         </div>
-        <div id="footer_bottom_mobile">
-            <a class="footer_logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-            <div class="footer_contact">
-                <h3>Contact</h3>
-                <a href="tel:614-555-5555">614-555-5555</a>
-                <a href="mailto:unknown@email.com">unknown@email.com</a>
-                <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+      </div>
+      <div id="footer_bottom">
+        <div class="logo_social">
+          <a class="footer_logo" href="./"
+            ><img src="./images/logo.png" alt="LOGO"
+          /></a>
+          <div class="social_media">
+            <p>Social Media</p>
+            <div class="social_media_icons">
+              <img src="images/facebook_icon.svg" alt="Facebook logo" />
             </div>
-            <div class="footer_quick_links">
-                <h3>Links</h3>
-                <nav>
-                    <a href="./">Home</a>
-                    <a href="./contact_us.html">Contact Us</a>
-                    <a href="./services.html">Services</a>
-                    <a href="./about_us.html">About Us</a>
-                    <a href="./resources.html">Resources</a>
-                </nav>
-            </div>
-            <div class="social_media">
-                <h3>Social Media</h3>
-                <div class="social_media_icons">
-                    <a href=""><img src="images/facebook_icon.svg" alt="Facebook logo"></a>
-                </div>
-            </div>
-            <div class="footer_newsletter">
-                <h3>Newsletter</h3>
-                <div class="footer_newsletter_box">
-                    <p>Subscribe to our newsletter</p>
-                    <form class="newsletter_subscribe_form" action="">
-                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                        <input type="submit" value="">
-                    </form>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="footer_quick_links">
+          <h3>Links</h3>
+          <nav>
+            <a href="./">Home</a>
+            <a href="./contact_us.html">Contact Us</a>
+            <a href="./services.html">Services</a>
+            <a href="./about_us.html">About Us</a>
+            <a href="./resources.html">Resources</a>
+          </nav>
+        </div>
+        <div class="footer_contact">
+          <h3>Contact</h3>
+          <a href="tel:614-555-5555">614-555-5555</a>
+          <a href="mailto:mervecarellc@gmail.com">mervecarellc@gmail.com</a>
+        </div>
+        <div class="footer_newsletter">
+          <h3>Newsletter</h3>
+          <div class="footer_newsletter_box">
+            <p>Subscribe to our newsletter</p>
+            <form class="newsletter_subscribe_form" action="">
+              <input
+                type="text"
+                name="newsletter_email"
+                id=""
+                placeholder="Enter your email..."
+              />
+              <input type="submit" value="" />
+            </form>
+          </div>
+        </div>
+      </div>
+      <div id="footer_bottom_mobile">
+        <a class="footer_logo" href="./"
+          ><img src="./images/logo.png" alt="LOGO"
+        /></a>
+        <div class="footer_contact">
+          <h3>Contact</h3>
+          <a href="tel:614-555-5555">614-555-5555</a>
+          <a href="mailto:mervecarellc@gmail.com">mervecarellc@gmail.com</a>
+        </div>
+        <div class="footer_quick_links">
+          <h3>Links</h3>
+          <nav>
+            <a href="./">Home</a>
+            <a href="./contact_us.html">Contact Us</a>
+            <a href="./services.html">Services</a>
+            <a href="./about_us.html">About Us</a>
+            <a href="./resources.html">Resources</a>
+          </nav>
+        </div>
+        <div class="social_media">
+          <h3>Social Media</h3>
+          <div class="social_media_icons">
+            <a href=""
+              ><img src="images/facebook_icon.svg" alt="Facebook logo"
+            /></a>
+          </div>
+        </div>
+        <div class="footer_newsletter">
+          <h3>Newsletter</h3>
+          <div class="footer_newsletter_box">
+            <p>Subscribe to our newsletter</p>
+            <form class="newsletter_subscribe_form" action="">
+              <input
+                type="text"
+                name="newsletter_email"
+                id=""
+                placeholder="Enter your email..."
+              />
+              <input type="submit" value="" />
+            </form>
+          </div>
+        </div>
+      </div>
     </footer>
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
